# pipeweaver

./: .gitignore  AI_POLICY.md  Cargo.toml  README.md
.github/ci/: build-packages
.github/workflows/: build-release.yml  build.yml  get-version.yml  release.yml
app/: Cargo.toml  README.md  build.rs  main.qml
app/src/: main.rs  raise_window.rs  window_properties.rs
client/: Cargo.toml
client/src/: cli.rs  main.rs
daemon/: Cargo.toml  build.rs
daemon/resources/desktop/: pipeweaver.desktop
daemon/resources/icons/: generate_icons.sh
daemon/src/: main.rs  settings.rs  stop.rs
daemon/src/handler/: messaging.rs  mod.rs  packet.rs  primary_worker.rs
daemon/src/handler/pipewire/: ipc.rs  manager.rs  mod.rs
daemon/src/handler/pipewire/components/: application.rs  defaults.rs  filters.rs  links.rs  load_profile.rs  mod.rs  mute.rs  node.rs  physical.rs  port_maps.rs  profile.rs  routing.rs  volume.rs
daemon/src/handler/pipewire/components/audio_filters/: meter.rs  mod.rs  pass_through.rs  volume.rs
daemon/src/handler/pipewire/components/audio_filters/internal/: meter.rs  mod.rs  pass_through.rs  volume.rs
daemon/src/handler/pipewire/components/audio_filters/lv2/: base.rs  delay.rs  mod.rs  urid_mapper.rs
daemon/src/handler/pipewire/components/audio_filters/lv2/filters/: delay.rs  generic.rs  mod.rs
daemon/src/handler/pipewire/ipc/: ipc.rs  mod.rs
daemon/src/platform/: linux.rs  mod.rs  tray.rs
daemon/src/servers/: http_server.rs  ipc_server.rs
ipc/: Cargo.toml
ipc/src/: client.rs  lib.rs
ipc/src/clients/ipc/: ipc_client.rs
ipc/src/clients/web/: web_client.rs
ipc/src/commands/: mod.rs
pipecast-client/: Cargo.toml
pipecast-daemon/: Cargo.toml  build.rs
pipecast-daemon/src/: main.rs  profile.rs  settings.rs
pipecast-daemon/src/handler/: messaging.rs  mod.rs  packet.rs  primary_worker.rs
pipecast-daemon/src/handler/pipewire/: manager.rs  mod.rs
pipecast-daemon/src/handler/pipewire/components/: filters.rs  links.rs  load_profile.rs  mod.rs  mute.rs  node.rs  physical.rs  profile.rs  routing.rs  volume.rs
pipecast-daemon/src/handler/pipewire/components/audio_filters/: meter.rs  mod.rs  pass_through.rs  volume.rs  waker.rs
pipecast-daemon/src/handler/pipewire/filters/: meter.rs  mod.rs  pass_through.rs  volume.rs
pipecast-daemon/src/handler/pipewire/ipc/: filters.rs  ipc.rs  mod.rs  nodes.rs
pipecast-daemon/src/platform/: mod.rs
pipecast-daemon/src/servers/: http_server.rs  ipc_server.rs  mod.rs
pipecast-ipc/: Cargo.toml
pipecast-ipc/src/: client.rs
pipecast-ipc/src/clients/ipc/: ipc_client.rs  ipc_socket.rs
pipecast-ipc/src/clients/web/: web_client.rs
pipecast-ipc/src/commands/: mod.rs
pipecast-manager/: Cargo.toml  README.md
pipecast-manager/src/: lib.rs  store.rs
pipecast-pipewire/: Cargo.toml  README.md
pipecast-pipewire/src/: lib.rs  manager.rs  registry.rs  store.rs
pipecast-playground/: Cargo.toml  README.md
pipecast-playground/src/: main.rs
pipecast-profile/: Cargo.toml
pipecast-profile/src/: default.rs  lib.rs
pipecast-shared/: Cargo.toml
pipecast-shared/src/: lib.rs
pipecast-web/: README.md  package-lock.json  package.json
pipecast-web/src/: main.js
pipecast-web/src/assets/: main.css
pipecast-web/src/components/channels/: ChannelColumn.vue  MixAssignment.vue  PhysicalDeviceSelector.vue
pipecast-web/src/components/inputs/: PopupBox.vue  VerticalRange.vue
pipecast-web/src/components/routing/: Router.vue
pipecast-web/src/pipecast/: sockets.js  store.js  util.js
pipecast-web/src/views/: HomePage.vue
pipewire/: Cargo.toml  README.md
pipewire/src/: default_device.rs  lib.rs  manager.rs  registry.rs  store.rs
pipewire/src/registry/: client.rs  client_node.rs  device.rs  device_node.rs  factory.rs  link.rs  metadata.rs  mod.rs  port.rs
profile/: Cargo.toml
profile/src/: default.rs  lib.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.vue  main.js
web/src/app/: audio.js  filters.js  meter_scheduler.js  sockets.js  store.js  theme.js  util.js
web/src/assets/: main.css
web/src/components/: DeviceList.vue
web/src/components/channels/: ChannelColumn.vue  ChannelColumnVolume.vue  DevicePopup.vue  MuteTargetSelector.vue  PhysicalDeviceSelector.vue
web/src/components/inputs/: VerticalRange.vue
web/src/components/routing/: Router.vue
web/src/views/: HomePage.vue  LoadingScreen.vue  Mixer.vue  Settings.vue
web/src/views/desktop/: DeviceList.vue
web/src/views/desktop/applications/: Application.vue  ApplicationNodes.vue  ApplicationsList.vue  ProcessList.vue
web/src/views/desktop/channels/: ChannelColumn.vue  ChannelColumnVolume.vue  DevicePopup.vue  FilterView.vue  MixAssignment.vue  MuteTargetSelector.vue
web/src/views/desktop/components/: ColourPicker.vue  ModalOverlay.vue
web/src/views/desktop/devices/: PhysicalDeviceList.vue  PhysicalDevices.vue
web/src/views/desktop/filters/: AddFilterModal.vue  FilterListItem.vue  FilterView.vue
web/src/views/desktop/filters/filter/: GenericLV2.vue
web/src/views/desktop/filters/filter/bass_enhancer/: BassEnhancerFilter.vue  README.md
web/src/views/desktop/filters/filter/compressor/: CompressorFilter.vue  README.md
web/src/views/desktop/filters/filter/crusher/: CrusherFilter.vue  README.md
web/src/views/desktop/filters/filter/deesser/: DeesserFilter.vue  README.md
web/src/views/desktop/filters/filter/delay/: DelayChannel.vue  DelayFilter.vue  README.md
web/src/views/desktop/filters/filter/equaliser/: EqualiserFilter.vue  README.md
web/src/views/desktop/filters/filter/exciter/: ExciterFilter.vue  README.md
web/src/views/desktop/filters/filter/expander/: ExpanderFilter.vue  (+1 more)
web/src/views/desktop/filters/layout/: ActionBar.vue  ActionBarItem.vue  Field.vue  FlowItem.vue  FlowLayout.vue
web/src/views/desktop/inputs/: PopupBox.vue  VerticalRange.vue
web/src/views/desktop/routing/: Router.vue  RoutingCell.vue
web/src/views/mobile_landscape/: LandscapePage.vue
web/src/views/mobile_portrait/: PortraitPage.vue
(+22 files in other folders)
