[workspace]
resolver = "2"

members = [
    "client",
    "daemon",
    "ipc",
    "pipewire",
    "profile",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

authors = ["Craig McLure <craig@mclure.net>"]
license = "MIT"

homepage = "https://pipeweaver.github.io/"
repository = "https://github.com/pipeweaver/pipeweaver"

[workspace.dependencies]
### Logging ###
log = "0.4.29"

### Error Handling ###
anyhow = "1.0.100"

### Serialisation / Deserialisation ###
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

### Enum Helpers..
strum = { version = "0.27.2" }
strum_macros = "0.27.2"
enum-map = { version = "2.7.3", features = ["serde"] }

### JSON Patching ###
json-patch = "4.1.0"

### IPC Communication ###
interprocess = { version = "2.2.3", features = ["tokio"] }

### Device Identification ###
ulid = { version = "1.2.1", features = ["serde"] }


