[workspace]
resolver = "2"

members = [
    "client",
    "daemon",
    "ipc",
    "pipewire",
    "profile",
    "shared",
    "app",
]
default-members = [
    "client",
    "daemon",
    "ipc",
    "pipewire",
    "profile",
    "shared",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

authors = ["Craig McLure <craig@mclure.net>"]
license = "MIT"

homepage = "https://pipeweaver.github.io/"
repository = "https://github.com/pipeweaver/pipeweaver"

[workspace.dependencies]
### Logging ###
log = "0.4.29"

### Command Line Parsing ###
clap = { version = "4.6.0", features = ["derive"] }

### Error Handling ###
anyhow = "1.0.102"

### Project Paths
directories = "6.0.0"

### Serialisation / Deserialisation ###
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

### Enum Helpers..
strum = { version = "0.28.0" }
strum_macros = "0.28.0"
enum-map = { version = "2.7.3", features = ["serde"] }

### JSON Patching ###
json-patch = "4.1.0"

### IPC Communication ###
interprocess = { version = "2.4.0", features = ["tokio"] }

### Device Identification ###
ulid = { version = "1.2.1", features = ["serde"] }

### TokIO
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "macros"] }
