[package]
name = "pipeweaver-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true }
ulid = { workspace = true }

pipeweaver-shared = { path = "../shared" }


[build-dependencies]
