[package]
name = "pipeweaver-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }

clap = { workspace = true }

pipeweaver-shared = { path = "../shared" }
pipeweaver-ipc = { path = "../ipc" }


[build-dependencies]
