[package]
name = "pipeweaver-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

tokio = { workspace = true }
serde_json = { workspace = true }

### Project Paths
directories = { workspace = true }

interprocess = { workspace = true }

pipeweaver-shared = { path = "../shared", features = ["clap", "strum"] }
pipeweaver-ipc = { path = "../ipc" }

[build-dependencies]
