[package]
name = "pipeweaver-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

build = "build.rs"

[dependencies]
### Inherited Dependencies ###
anyhow = { workspace = true }
interprocess = { workspace = true }
ulid = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }

### Internal Dependencies ###
pipeweaver-ipc = { path = "../ipc" }
pipeweaver-profile = { path = "../profile" }
pipeweaver-pipewire = { path = "../pipewire" }
pipeweaver-shared = { path = "../shared" }

### Portal / Autostart Handling
ashpd = "0.12.0"
rust-ini = "0.21.3"

### Logging
file-rotate = "0.8.0"

### Enum Handling
enum-map = { workspace = true }
strum = { workspace = true }

### Project Paths
directories = "6.0.0"

### Log Writing ###
simplelog = "0.12.2"

### Async Runtime ###
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "macros"] }

### HTTP Server ###
actix = "0.13.5"
actix-web = { version = "4.9.0", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "ws"] }
actix-web-actors = { version = "4.3.1+deprecated" }
actix-cors = "0.7.0"
mime_guess = "2.0.5"
include_dir = "0.7.4"

### Tray Handling
image = "0.25.6"
ksni = "0.3.1"
open = "5.3.2"
which = "8.0.0"