[package]
name = "pipeweaver-daemon"
description = "A tool for audio control and routing via Pipewire"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

build = "build.rs"

[dependencies]
### Inherited Dependencies ###
anyhow = { workspace = true }
interprocess = { workspace = true }
ulid = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }

### Internal Dependencies ###
pipeweaver-ipc = { path = "../ipc" }
pipeweaver-profile = { path = "../profile" }
pipeweaver-pipewire = { path = "../pipewire" }
pipeweaver-shared = { path = "../shared" }

### Portal / Autostart Handling
ashpd = "0.12.0"
rust-ini = "0.21.3"

### Logging
file-rotate = "0.8.0"

### Enum Handling
enum-map = { workspace = true }
strum = { workspace = true }

### Project Paths
directories = "6.0.0"

### Log Writing ###
simplelog = "0.12.2"

### Async Runtime ###
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "macros"] }

### HTTP Server ###
actix-web = { version = "4.9.0", default-features = false, features = ["macros", "compress-brotli", "compress-gzip"] }
actix-ws = "0.3.0"
actix-cors = "0.7.0"
futures-lite = "2.6.1"
mime_guess = "2.0.5"
include_dir = "0.7.4"

### Tray Handling
# We use a custom fork of ksni. If the tray service isn't available at startup, the tray icon will never spawn. This
# fork fixes that, and allows cleaner fallthrough, allowing it to retry when the service appears.
ksni = { git = "https://github.com/FrostyCoolSlug/ksni.git" }

image = "0.25.6"
open = "5.3.2"
which = "8.0.0"

## Ok, Build Stuff Time :D
[package.metadata.deb]
name = "pipeweaver"
assets = [
    ["../target/release/pipeweaver-daemon", "usr/bin/", "755"],
    ["../daemon/resources/icons/pipeweaver.png", "usr/share/icons/hicolor/48x48/apps/", "644"],
    ["../daemon/resources/icons/pipeweaver-large.png", "usr/share/pixmaps/pipeweaver.png", "644"],
    ["../daemon/resources/icons/pipeweaver.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["../daemon/resources/desktop/pipeweaver.desktop", "usr/share/applications/", "644"],
]

section = "sound"
priority = "optional"
depends = "$auto"
extended-description = """\
A tool for audio control and routing via Pipewire
"""
revision = "1"

[package.metadata.generate-rpm]
name = "pipeweaver"
assets = [
    { source = "../target/release/pipeweaver-daemon", dest = "/usr/bin/pipeweaver-daemon", mode = "0755" },
    { source = "../daemon/resources/icons/pipeweaver.png", dest = "/usr/share/icons/hicolor/48x48/apps/pipeweaver.png", mode = "0644" },
    { source = "../daemon/resources/icons/pipeweaver-large.png", dest = "/usr/share/pixmaps/pipeweaver.png", mode = "0644" },
    { source = "../daemon/resources/icons/pipeweaver.svg", dest = "/usr/share/icons/hicolor/scalable/apps/pipeweaver.svg", mode = "0644" },
    { source = "../daemon/resources/desktop/pipeweaver.desktop", dest = "/usr/share/applications/pipeweaver.desktop", mode = "0644" },
]

# Because we build under Ubuntu in CI, generate-rpm is unable to calculate the dependencies required (no access
# to rpm / yum), so we need to disable the auto and specify dependencies manually.
auto-req = "no"

[package.metadata.generate-rpm.requires]
pipewire = ">= 1.0.5"   # Should be Fedora 40+