[package]
name = "pipeweaver-ipc"
version = "0.1.0"
edition = "2024"

authors = ["Craig McLure <craig@mclure.net>"]
repository = "https://github.com/pipeweaver/pipeweaver"
license = "MIT"


[dependencies]
# Local Dependencies
pipeweaver-shared = { path = "../shared" }
pipeweaver-profile = { path = "../profile" }

### Inherited Dependencies ###
anyhow = { workspace = true }
serde = { workspace = true }
json-patch = { workspace = true }
interprocess = { workspace = true }
ulid = { workspace = true }

enum-map = { workspace = true }

async-trait = "0.1.86"
futures = "0.3.31"
tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
tokio-serde = { version = "0.9.0", features = ["bincode", "json"] }

# Used for Web Requests
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
