[package]
name = "pipeweaver-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Local Dependencies
pipeweaver-shared = { path = "../shared" }
pipeweaver-profile = { path = "../profile" }

### Inherited Dependencies ###
anyhow = { workspace = true }
serde = { workspace = true }
json-patch = { workspace = true }
interprocess = { workspace = true }
ulid = { workspace = true }

enum-map = { workspace = true }

async-trait = "0.1.89"
futures = "0.3.31"
tokio-util = { version = "0.7.17", features = ["codec", "compat"] }
tokio-serde = { version = "0.9.0", features = ["bincode", "json"] }

# Used for Web Requests
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
