[package]
name = "pipecast-pipewire"
version = "0.1.0"
edition = "2021"

[dependencies]
### Inhertied Dependencies ###
anyhow = { workspace = true }
ulid = { workspace = true }
log = { workspace = true }

pipewire = { git = "https://gitlab.freedesktop.org/FrostyCoolSlug/pipewire-rs.git" }
oneshot = "0.1.8"

enum-map = "2.7.3"