[package]
name = "pipecast-pipewire"
version = "0.1.0"
edition = "2021"

[dependencies]
### Inhertied Dependencies ###
anyhow = { workspace = true }
ulid = { workspace = true }
log = { workspace = true }

pipewire = { git = "https://gitlab.freedesktop.org/FrostyCoolSlug/pipewire-rs.git", features = ["v0_3_77"] }
tokio = "1.43.0"

enum-map = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

parking_lot = "0.12.3"