[package]
name = "pipecast-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
### Inheritied Dependencies ###
anyhow = { workspace = true }
log = { workspace = true }

### Async Runtime ###
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync", "macros"] }

#pipewire = { git = "https://gitlab.freedesktop.org/FrostyCoolSlug/pipewire-rs.git" }
#pipewire = { path = "../../../IdeaProjects/pw-rs/pipewire" }
pipecast-pipewire = { path = "../pipecast-pipewire" }
