[package]
name = "pipecast-profile"
version = "0.1.0"
edition = "2021"

[dependencies]
pipecast-shared = { path = "../pipecast-shared" }

serde = { workspace = true }
serde_json = { workspace = true }

ulid = { workspace = true }
enum-map = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }