[package]
name = "pipeweaver-pipewire"
version = "0.1.0"
edition = "2024"

authors = ["Craig McLure <craig@mclure.net>"]
repository = "https://github.com/pipeweaver/pipeweaver"
license = "MIT"


[dependencies]
### Inhertied Dependencies ###
anyhow = { workspace = true }
ulid = { workspace = true }
log = { workspace = true }

pipewire = { git = "https://gitlab.freedesktop.org/FrostyCoolSlug/pipewire-rs.git", features = ["v0_3_77"] }
#tokio = "1.43.0"
oneshot = "0.1.11"

enum-map = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Needed for (de)serialization of Pipewire structs
serde_json = { workspace = true }

parking_lot = "0.12.3"