[package]
name = "pipeweaver-pipewire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
### Inhertied Dependencies ###
anyhow = { workspace = true }
ulid = { workspace = true }
log = { workspace = true }

pipewire = { git = "https://gitlab.freedesktop.org/FrostyCoolSlug/pipewire-rs.git", features = ["v0_3_45"] }
oneshot = "0.1.11"

enum-map = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Needed for (de)serialization of Pipewire structs
serde_json = { workspace = true }

parking_lot = "0.12.3"