[package]
name = "pipeweaver-profile"
version = "0.1.0"
edition = "2021"

authors = ["Craig McLure <craig@mclure.net>"]
repository = "https://github.com/pipeweaver/pipeweaver"
license = "MIT"


[dependencies]
pipeweaver-shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }

ulid = { workspace = true }
enum-map = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }