[package]
name = "pipeweaver-profile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
pipeweaver-shared = { path = "../shared", features = ["serde", "enum-map"] }

serde = { workspace = true }

ulid = { workspace = true }
enum-map = { workspace = true }
