[package]
name = "pipeweaver-shared"
version = "0.1.0"
edition = "2024"

authors = ["Craig McLure <craig@mclure.net>"]
repository = "https://github.com/pipeweaver/pipeweaver"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

ulid = { workspace = true }
enum-map = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }