[package]
name = "pipeweaver-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

ulid = { workspace = true }
enum-map = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }