[package]
name = "pipeweaver-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["serde"]
strum = ["dep:strum", "dep:strum_macros"]

[dependencies]
clap = { workspace = true, optional = true }

serde = { workspace = true, optional = true }

ulid = { workspace = true }
enum-map = { workspace = true, optional = true }

strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }